--- a/css/pjw-filter.css
+++ b/css/pjw-filter.css
@@ -1,11 +1,31 @@
 .pjw-filter-panel {
-  display: none;
   color: rgba(0, 0, 0, .4);
-  margin: 10px 12%;
+  margin: 0 12%;
   border-radius: 20px;
   width: 76%;
   background: linear-gradient(-20deg, #b6dcff, #b9b6e5);
   --mdc-theme-secondary: rgb(16, 89, 223);
+  transition: transform .2s ease-in, opacity .2s ease-in;
+
+  pointer-events: none;
+  transform: translate(-20px, -40px) scale(1.1, 1.1);
+  opacity: 0;
+  height: 0;
+}
+
+.pjw-filter-panel.shown {
+  height: auto;
+  opacity: 1;
+  pointer-events: auto;
+  transform: none;
+}
+
+.pjw-filter-panel__content {
+  margin: 10px 0;
+  opacity: 0;
+  transition: opacity .2s ease-in;
+  display: flex;
+  flex-direction: column;
 }
 
 .pjw-filter-panel__content > div {
@@ -101,4 +121,9 @@
 
 #pjw-hours-filter-control > .pjw-mini-button:hover {
   color: rgb(208, 196, 16);
+}
+
+#frozen-quotes {
+  font-size: 12px;
+  color: rgba(0, 0, 0, .35);
 }
