--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -44,12 +44,17 @@
   min-width: 350px;
 }
 
+#pjw-select-gradeList {
+  min-width: 130px;
+  max-width: 130px;
+}
+
 #pjw-select-specialitySelect {
   min-width: 300px;
 }
 
 #pjw-select-termList {
-  min-width: 300px;
+  min-width: 250px;
 }
 
 .pjw-classlist-controls {
@@ -514,9 +519,21 @@
   font-size: 10px;
 }
 
+.pjw-class-comment-button.alter {
+  color: rgb(215, 10, 132);
+  background: transparent;
+  user-select: none;
+  transition: color .1s ease-out;
+}
+
+.pjw-class-comment-button.alter:hover {
+  color: rgb(215, 10, 132, .5);
+}
+
 .pjw-class-comment-button__container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .pjw-class-comment-button__status {
