--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -591,6 +591,10 @@
   color: #9eb314;
 }
 
+.pjw-console-icon.favorite {
+  color: rgb(255, 99, 144);
+}
+
 #pjw-console-history {
   width: 100%;
   max-height: 500px;
