--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -127,19 +127,20 @@
 /* Body */
 
 .pjw-classlist-body {
-  margin: 0 5% 20px 5%;
-  width: 90%;
+  margin: 0 3% 20px 3%;
+  width: 94%;
   top: 20px;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   opacity: 0;
 }
 
 .pjw-class-container {
   padding: 10px 30px;
   border-radius: 20px;
-  margin: 2px 0;
+  margin: 2px 4px;
   width: 100%;
   position: relative;
   justify-content: space-between;
@@ -149,6 +150,7 @@
   order: 0;
   background: linear-gradient(200deg, rgba(99,6,95,.2) 0%, rgba(175,55,232,.2) 73%, rgba(255,71,152,.2) 100%);
   transition: background .2s ease-out;
+  flex-basis: 35%;
 }
 
 .pjw-class-container--compressed {
@@ -181,6 +183,11 @@
   flex-direction: column;
   justify-content: space-between;
   width: max(20%, 250px);
+}
+
+.pjw-classlist-body--condensed .pjw-class-info {
+  align-items: center;
+  flex-direction: row;
 }
 
 .pjw-class-container--compressed .pjw-class-info {
@@ -364,6 +371,10 @@
   justify-content: space-evenly;
 }
 
+.pjw-classlist-body--condensed .pjw-class-sideinfo {
+  flex-direction: row;
+}
+
 .pjw-class-time-detail {
   color: rgba(0, 0, 0, .6);
 }
@@ -382,7 +393,7 @@
 }
 
 .pjw-class-container--compressed .pjw-class-weeknum-bar {
-  width: 180px;
+  width: 150px;
   cursor: pointer;
 }
 
