--- a/css/pjw.css
+++ b/css/pjw.css
@@ -1,3 +1,4 @@
+/* PJW Toolbar (Legacy) */
 #pjw-toolbar {
   font-size: 13px;
   position: fixed;
@@ -12,9 +13,11 @@
   opacity: 0.8;
   transition: left .3s ease-out, opacity .3s ease-out;
 }
+
 #pjw-toolbar-content {
   margin-left: 53px;
 }
+
 .about-proj {
   margin-top: 3px;
   font-size: 12px;
@@ -22,25 +25,6 @@
   clear: both;
 }
 
-.pjw-mini-button {
-  font-size: 14px; font-weight: bold;
-  border: 0; border-radius: 7px;
-  background-color: white; color: #63065f;
-  user-select: none; cursor: pointer;
-  padding: 1px 7px;
-  margin: 2px 5px;
-  transition: all .1s ease-in;
-}
-.pjw-mini-button:hover {
-  color: rgba(255, 155, 25, 1);
-  border-radius: 10px;
-  padding: 1px 10px;
-  margin: 2px;
-}
-.pjw-mini-button:active {
-  color: #c1c1c1;
-  background-color: rgba(255, 255, 255, .8);
-}
 #pjw-toolbar-collapse-bg {
   position: absolute;
   left: -1px;
@@ -54,9 +38,11 @@
   transition: background-color .2s ease-out;
   cursor: pointer;
 }
+
 #pjw-toolbar-collapse-bg:hover {
   background-color: rgba(255, 255, 255, .6);
 }
+
 #pjw-toolbar-collapse {
   background-color: white;
   cursor: pointer;
@@ -70,6 +56,29 @@
   border-radius: 50%;
   padding: 0;
   transition: transform .3s ease-out, left .2s ease-out, bottom .2s ease-out;
+}
+
+/* PJW Mini Button */
+.pjw-mini-button {
+  font-size: 14px; font-weight: bold;
+  border: 0; border-radius: 7px;
+  background-color: white; color: #63065f;
+  user-select: none; cursor: pointer;
+  padding: 1px 7px;
+  margin: 2px 5px;
+  transition: all .1s ease-in;
+}
+
+.pjw-mini-button:hover {
+  color: #f37232;
+  border-radius: 10px;
+  padding: 1px 10px;
+  margin: 2px;
+}
+
+.pjw-mini-button:active {
+  color: #c1c1c1;
+  background-color: rgba(255, 255, 255, .8);
 }
 
 @font-face {
@@ -145,6 +154,7 @@ body * {
   border-radius: 18px 18px 0 0;
   background: none !important;
   display: block;
+  transition: background .12s ease-out;
 }
 
 #Nav > ul > li:hover {
@@ -153,7 +163,7 @@ body * {
 }
 
 #Nav > ul > li:active {
-  background: rgba(255, 255, 255, .6) !important;
+  background: rgba(255, 255, 255, .9) !important;
 }
 
 #Nav > ul > li > a {
@@ -179,6 +189,7 @@ body * {
   position: relative;
   left: 5px; top: 5px;
   opacity: 0.9;
+  display: inline-block;
 }
 
 #Header > #Logo > a {
@@ -227,6 +238,7 @@ body * {
   text-align: center;
   margin: 2px 3px;
   color: var(--white) !important;
+  cursor: wait;
 }
 
 .Line {
@@ -236,7 +248,7 @@ body * {
 #pjw-welcome {
   width: 90%;
   max-width: 600px;
-  margin: 20px 5%;
+  margin: 20px min(5%, 25px);
   background: linear-gradient(-70deg, #ff6390, #9995ef);
   border-radius: 30px;
   color: rgba(255, 255, 255, .82) !important;
@@ -284,6 +296,93 @@ body * {
   color: rgba(255, 255, 255, 1) !important;
 }
 
+#pjw-logout-button {
+  color: darkred;
+}
+
+#pjw-logout-button:hover {
+  color: red;
+}
+
+#Function.light {
+  background: rgba(0, 0, 0, .15);
+}
+
+#Function.light > ul > li {
+  background: rgba(255, 255, 255, .5);
+}
+
+#Function.light > ul > li > a {
+  color: rgba(0, 0, 0, .6) !important;
+}
+
+#Function.light > ul > li > a > img {
+  opacity: 1;
+}
+
+#Function {
+  border-radius: 18px;
+  background: rgba(0, 0, 0, .6);
+  margin: 25px !important;
+  padding: 10px;
+  transform: background 1.2s ease-in;
+}
+
+#Function > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+#Function > ul > li {
+  border-radius: 8px;
+  padding: 20px 6px;
+  margin: 5px 3px;
+  transition: all .4s cubic-bezier(0, 1, 1, 1);
+  background: var(--black);
+  user-select: none;
+}
+
+#Function > ul > li:hover {
+  padding: 22px 0;
+  margin: 3px 9px;
+  border-radius: 18px;
+  background: rgba(0, 0, 0, .7);
+}
+
+#Function > ul > li:active {
+  transform: scale(1.05);
+  background: rgba(0, 0, 0, .9);
+}
+
+#Function > ul > li:hover > a {
+  color: var(--white) !important;
+  font-weight: bold;
+  text-decoration: none;
+  transform: scale(1.2);
+}
+
+#Function > ul > li:hover > a:after {
+  content: ">";
+  margin-left: 3px;
+  font-size: 12px;
+}
+
+#Function > ul > li > a {
+  color: var(--white) !important;
+  font-size: 120%;
+  transition: all .2s ease-out;
+}
+
+#Function > ul > li > a > img {
+  opacity: 0;
+  transition: all .17s ease-in;
+  width: 50%;
+}
+
+#Function > ul > li:hover > a > img {
+  transform: scale(1.1);
+}
 
 #potatojw_mask {
   display: none;
