--- a/css/pjw.css
+++ b/css/pjw.css
@@ -255,47 +255,52 @@ body * {
   opacity: 0;
 }
 
-/* pjw-welcome */
-#pjw-welcome {
-  width: 90%;
-  max-width: 600px;
+/* pjw-card */
+.pjw-card {
   margin: 20px min(5%, 25px);
-  background: linear-gradient(-70deg, #ff6390, #9995ef);
   border-radius: 30px;
   color: rgba(255, 255, 255, .82) !important;
   padding: 12px 24px;
+  max-width: fit-content;
+  max-width: -moz-fit-content;
 }
 
-#pjw-welcome > * {
+.pjw-card > * {
   margin: 6px 0;
 }
 
-#pjw-welcome hr {
+.pjw-card hr {
   border-style: dotted;
   opacity: .6;
 }
 
-#pjw-welcome heading {
+.pjw-card heading {
   margin: 10px 0;
   font-weight: bold;
   font-size: 24px;
   color: rgba(255, 255, 255, .9) !important;
 }
 
-#pjw-welcome p {
+.pjw-card subheading {
+  margin: 4px 0 8px 0;
+  font-size: 18px;
+  color: rgba(255, 255, 255, .9) !important;
+}
+
+.pjw-card p {
   margin: 4px 0;
   font-size: 15px;
   color: rgba(255, 255, 255, .82) !important;
 }
 
-#pjw-welcome note {
+.pjw-card note {
   margin: 2px 0;
   display: block;
   font-size: 12px;
   color: rgba(255, 255, 255, .75) !important;
 }
 
-#pjw-welcome a {
+.pjw-card a {
   margin: 0 5px;
   font-size: inherit;
   text-decoration: none;
@@ -303,19 +308,18 @@ body * {
   transition: color .1s ease-out;
 }
 
-#pjw-welcome a:hover {
+.pjw-card a:hover {
   color: rgba(255, 255, 255, 1) !important;
 }
 
-/* pjw-menu */
+#pjw-welcome {
+  width: 90%;
+  max-width: 600px;
+  background: linear-gradient(-70deg, #ff6390, #9995ef);
+}
+
 #pjw-menu {
-  margin: 20px min(5%, 25px);
   background: linear-gradient(-70deg, rgb(99 110 255), rgb(88 150 185));
-  border-radius: 30px;
-  color: rgba(255, 255, 255, .82) !important;
-  padding: 12px 24px;
-  max-width: fit-content;
-  max-width: -moz-fit-content;
   --mdc-theme-primary: #63065f;
 }
 
