--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -608,6 +608,7 @@
 }
 
 .pjw-class-container--compressed .pjw-class-places {
+  width: 140px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
