--- a/css/pjw.css
+++ b/css/pjw.css
@@ -358,6 +358,11 @@ body * {
   background: rgba(0, 0, 0, .15);
 }
 
+#Function.light.main-page-function {
+  background: none;
+  padding: 0;
+}
+
 #Function.light > ul > li {
   background: rgba(255, 255, 255, .5);
 }
@@ -403,14 +408,13 @@ body * {
 }
 
 #Function > ul > li:hover {
-  padding: 22px 0;
-  margin: 3px 9px;
-  border-radius: 18px;
+  transform: matrix(0.96, 0, 0, 1, 0, -10);
+  border-radius: 24px;
   background: rgba(0, 0, 0, .7);
 }
 
 #Function > ul > li:active {
-  transform: scale(1.05);
+  transform: matrix(1.05, 0, 0, 1.05, 0, -8);
   background: rgba(0, 0, 0, .9);
 }
 
