--- a/css/pjw-classlist.css
+++ b/css/pjw-classlist.css
@@ -680,7 +680,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin: 2px;
+  margin: 6px 2px 2px 2px;
 }
 
 .pjw-class-container--compressed .pjw-class-num-info {
@@ -712,8 +712,8 @@
 }
 
 .pjw-class-container--compressed .pjw-class-bignum > .num {
-  font-size: 24px;
-  line-height: 24px;
+  font-size: 22px;
+  line-height: 22px;
   margin: 0 2px;
 }
 
